examples/invalid/12_local_function_forward_reference.lane
// invalid: local named functions are sequential and cannot be called before declaration
fn bad(value : Int) -> Int {
  helper(value)
  fn helper(x : Int) -> Int {
    x
  }
}

